--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -2,20 +2,89 @@
 @import './flex.css';
 @import './common.css';
 
-.site_header {
-  width: 100%;
-  background-color: #333;
-  height: 100px;
+.app-footer {
+  background-color: #3c3d41;
+}
+.footer-bs {
+  background-color: #3c3d41;
+  padding: 60px 0;
+  color: rgba(255,255,255,1.00);
+  border-bottom-right-radius: 6px;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 6px;
+}
+.footer-bs .footer-brand, .footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { padding:10px 25px; }
+.footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { border-color: transparent; }
+.footer-bs .footer-brand h2 { margin:0px 0px 10px; }
+.footer-bs .footer-brand p { font-size:12px; color:rgba(255,255,255,0.70); }
+
+.footer-bs .footer-nav ul.pages { list-style:none; padding:0px; }
+.footer-bs .footer-nav ul.pages li { padding:5px 0px;}
+.footer-bs .footer-nav ul.pages a { color:rgba(255,255,255,1.00); font-weight:bold; text-transform:uppercase; }
+.footer-bs .footer-nav ul.pages a:hover { color:rgba(255,255,255,0.80); text-decoration:none; }
+.footer-bs .footer-nav h4 {
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  margin-bottom:10px;
+}
+
+.footer-bs .footer-nav ul.list { list-style:none; padding:0px; }
+.footer-bs .footer-nav ul.list li { padding:5px 0px;}
+.footer-bs .footer-nav ul.list a { color:rgba(255,255,255,0.80); }
+.footer-bs .footer-nav ul.list a:hover { color:rgba(255,255,255,0.60); text-decoration:none; }
+
+.footer-bs .footer-social ul { list-style:none; padding:0px; }
+.footer-bs .footer-social h4 {
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+.footer-bs .footer-social li { padding:5px 4px;}
+.footer-bs .footer-social a { color:rgba(255,255,255,1.00);}
+.footer-bs .footer-social a:hover { color:rgba(255,255,255,0.80); text-decoration:none; }
+
+.footer-bs .footer-ns h4 {
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  margin-bottom: 10px;
+}
+.footer-bs .footer-ns p { font-size:12px; color:rgba(255,255,255,0.70); }
+.copyright {
   text-align: center;
+  border-top: 1px solid rgba(255,255,255,0.10);
+  padding: 20px 0;
   color: #fff;
 }
-.site_header .copyright {
-  text-align: center;
+.copyright p {
+  margin: 0;
+}
+.contactInfo h5 {
+  font-size: 24px;
+  font-weight: 600;
+}
+.codeImg li {
+  display: inline-block;
+}
+.codeImg li:first-child {
+  margin-right: 10px;
+}
+.codeImg img {
+  width: 100px;
+}
+
+@media (min-width: 768px) {
+  .footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { border-left:solid 1px rgba(255,255,255,0.10); }
 }
 
 .main {
   margin-top: 32px;
   margin-bottom: 32px;
+}
+
+.news-list {
+  margin-top: 32px;
 }
 
 .newsItem {
