--- a/app/public/css/common.css
+++ b/app/public/css/common.css
@@ -17,6 +17,10 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 500; }
 
+li {
+  list-style: none;
+}
+
 .textOverflow {
   display: block;
   width: 100%;
